traversal.snake.Snake.scala.error
Compilation error:
Snake:29: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def crawl():Unit{
                ^Snake:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()){
  ^Snake:30: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(!estFaceMur){
  ^